# ChromaEmitters

./: README.md  pyproject.toml
.github/: copilot-instructions.md
config/: ChromaEmitters_CONFIG.json  ChromaEmitters_CONFIG.json.bak
config/emitters.d/: README.md
docs/: README.md
src/ChromaEmitters/: __init__.py  config_loader.py
src/ChromaEmitters/integration/: __init__.py  registry_registration.py
src/ChromaEmitters/tapo/: __init__.py  tapo_device.py  tapo_emitter.py
src/ChromaEmitters/terminal/: __init__.py  terminal_emitter.py
tests/: test_chromaemitters_config_loading.py  test_chromaemitters_registry_registration.py  test_chromaemitters_tapo_device_mock.py  test_chromaemitters_tapo_emitter_init.py  test_chromaemitters_tapo_frame_rendering.py
